1. Update Wine Register 2. Update I18N 3. Update Layout
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/config/locales/models/acitve_record.en.yml
+++ b/config/locales/models/acitve_record.en.yml
@@ -1,5 +1,10 @@
 en:
-  helpers:
+ activerecord:
+    models:
+      register: 'Wine'
+ helpers:
     label:
       wines_register:
         name_zh: "Chinese Name"
+
+
