--- a/config/locales/defaults/zh-CN.yml
+++ b/config/locales/defaults/zh-CN.yml
@@ -2,8 +2,36 @@ zh-CN:
   add: "添加"
   create_wine_item: "添加酒的条目"
   back_to_home: "返回首页"
-
-
+  
+  nav:
+    home: "首页"
+    wines: "美酒"
+    wineries: "酒庄"
+    events: "活动"
+    mine: "我的Patrick"
+    about_us: "关于我们"
+    contact_us: "联系我们"
+    help: "帮组中心"
+    private: "免责声明"
+    site_map: "网站地图"
+    
+    sub_nav:
+      settings:
+        basic: "基本设置"
+        privacy: "隐私设置"
+        invite: "邀请好友"
+        sync: "同步动向"
+      mine:
+        index : "首页"
+        cellars: "我的酒窖"
+        albums: "我的相册"
+        wines: "我上传的酒"
+        wish: "想喝"
+        do: "喝过"
+        
+    
+  
+    
   activerecord:
     errors:
       models:
