--- a/config/locales/gems/devise.zh-CN.yml
+++ b/config/locales/gems/devise.zh-CN.yml
@@ -82,6 +82,7 @@ zh-CN:
         receive_unlock: "没有收到重置步骤？"
         sign_in: "登录"
         sign_up: "注册"
+        sign_out: "登出"
         sign_up_closed: "目前不开放公开注册。"
       mail_signup_form:
         sign_up_for_an_invite: "凭邀请函注册！"
