--- a/config/locales/models/acitve_record.zh-CN.yml
+++ b/config/locales/models/acitve_record.zh-CN.yml
@@ -21,6 +21,11 @@ zh-CN:
         variety_percentage_value: "成分百分比"
         variety_name: "葡萄品种"
         capacity: "容量"
+      user:
+        email: "邮箱"
+        username: "用户名"
+        password: "密码"
+        password_confirmation: "确认密码"
 
 
 
