--- a/config/locales/defaults/zh-CN.yml
+++ b/config/locales/defaults/zh-CN.yml
@@ -11,7 +11,7 @@ zh-CN:
     mine: "我的Patrick"
     about_us: "关于我们"
     contact_us: "联系我们"
-    help: "帮组中心"
+    help: "帮助中心"
     private: "免责声明"
     site_map: "网站地图"
     
