--- a/config/locales/defaults/zh-CN.yml
+++ b/config/locales/defaults/zh-CN.yml
@@ -26,12 +26,13 @@ zh-CN:
         invite: "邀请好友"
         sync: "同步动向"
       mine:
+        wine_favorite : "藏酒"
         comments : "评论"
         testing_notes : "品酒辞"
         wine_follows : "关注的酒"
         winery_follows : "关注的酒庄"
-        user_follows : "关注的人"
-        user_followers : "粉丝"
+        followings : "关注的人"
+        followers : "粉丝"
         index : "首页"
         settings: "设置"
         feeds: "收听"
