--- a/config/locales/models/error_message.zh-CN.yml
+++ b/config/locales/models/error_message.zh-CN.yml
@@ -41,7 +41,7 @@ zh-CN:
               blank: "用户名不能为空"
               taken: 该用户名已经被注册了
             email:
-              invalid: "请输入正确的email格式"
+              invalid: "请输入正确的Email格式"
               blank: "Email不能为空"
               taken: 该Email已经被注册了
             password: 
