--- a/config/locales/defaults/zh-CN.yml
+++ b/config/locales/defaults/zh-CN.yml
@@ -39,7 +39,7 @@ zh-CN:
         feeds: "收听"
         status: "广播"
         cellars: "我的酒窖"
-        albums: "我的相册"
+        albums: "相册"
         wines: "我上传的酒"
         wish: "想喝"
         do: "喝过"
