Bugs: Fixed About User can update password with null charater
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/config/locales/defaults/zh-CN.yml
+++ b/config/locales/defaults/zh-CN.yml
@@ -1,4 +1,9 @@
 zh-CN:
+  mailboxer:
+    message_mailer:
+      subject_new: 您有新的消息
+      subject_reply: 您的朋友回复了您的信息
+
   add: "添加"
   cancle: "取消"
   new_album: "新建相册"
