1. Add User Agreement 2. Add Welcome Email
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/config/locales/defaults/zh-CN.yml
+++ b/config/locales/defaults/zh-CN.yml
@@ -20,6 +20,7 @@ zh-CN:
     contact_us: "联系我们"
     help: "帮助中心"
     private: "免责声明"
+    agreement: "用户协议"
     site_map: "网站地图"
     feedback: "意见反馈"
 
