--- a/config/locales/defaults/zh-CN.yml
+++ b/config/locales/defaults/zh-CN.yml
@@ -19,11 +19,11 @@ zh-CN:
     about_us: "关于我们"
     contact_us: "联系我们"
     help: "帮助中心"
-    private: "免责声明"
+    private: "隐私条款"
     agreement: "用户协议"
     site_map: "网站地图"
     feedback: "意见反馈"
-
+    terms_and_conditions: "免责声明"
     sub_nav:
       settings:
         basic: "基本设置"
