user albums_count user_profile current item

--- a/config/locales/defaults/zh-CN.yml
+++ b/config/locales/defaults/zh-CN.yml
@@ -44,7 +44,7 @@ zh-CN:
         settings: "设置"
         feeds: "收听"
         status: "广播"
-        cellars: "我的酒窖"
+        cellars: "藏酒"
         albums: "相册"
         wines: "我上传的酒"
         wish: "想喝"
