--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -6,6 +6,8 @@ zh-CN:
     no_ability: "您没有权限执行此操作！"
     upload_photo_success: "成功上传图片。"
     upload_photo_failure: "上传图片失败。"
+    login_success: "成功登陆iWine。"
+    require_no_user: "需要退出登陆才能执行此操作。"
     cellar_item:
       create_success: "成功添加酒款到您的酒窖。"
     comment:
