--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -43,6 +43,7 @@ zh-CN:
       check_is_public: "此相册仅用户自己可见！"
     oauth:
       update_oauth: "同步第三方成功。"
+      ouath_failure: "同步第三方失败。"
 
   helpers:
     submit:
