完善评论同步到第三方并更换豆瓣，人人，新浪等的app_key

--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -1,4 +1,8 @@
 zh-CN:
+  devise:
+    omniauth_callbacks:
+      user:
+        failure: "同步失败"
   notice:
     save_success: "保存成功。"
     update_success: "更新成功。"
