--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -13,7 +13,7 @@ zh-CN:
     login_success: "成功登陆iWine。"
     require_no_user: "需要退出登陆才能执行此操作。"
     cellar_item:
-      create_success: "成功添加酒款到您的酒窖。"
+      create_success: "成功添加酒到您的酒窖。"
     comment:
       comment_success: "评论成功。"
       follow_success: "关注成功。"
