--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -7,6 +7,7 @@ zh-CN:
     save_success: "保存成功。"
     update_success: "更新成功。"
     destroy_success: "删除成功。"
+    destroy_failure: "删除失败。"
     failure: "操作失败！"
     no_ability: "您没有权限执行此操作！"
     upload_photo_success: "成功上传图片。"
@@ -59,6 +60,8 @@ zh-CN:
       refresh_access_token: "授权过期，请刷新授权。"
     note:
       submitted_success: "成功保存为草稿。"
+      publish_success: "成功发布品酒辞。"
+      publish_failure: "发布失败，未能成功发布品酒辞。"
 
   helpers:
     submit:
