wine_note 一支酒的所有品酒辞

--- a/config/locales/defaults/zh-CN.yml
+++ b/config/locales/defaults/zh-CN.yml
@@ -15,6 +15,7 @@ zh-CN:
     wines: "酒"
     wineries: "酒庄"
     events: "活动"
+    notes: "品酒辞"
     mine: "我的Patrick"
     about_us: "关于我们"
     contact_us: "联系我们"
