--- a/config/locales/defaults/zh-CN.yml
+++ b/config/locales/defaults/zh-CN.yml
@@ -42,6 +42,7 @@ zh-CN:
         followings : "关注的人"
         follows : "关注"
         followers : "粉丝"
+        note_follows : "收藏"
         index : "首页"
         settings: "设置"
         feeds: "收听"
